.kubernetes/local-mm-frontend-deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mm-frontend
  labels:
    app: mm-frontend
spec:
  ports:
    - port: 80
      targetPort: 80
      name: mm-frontend
  selector:
    app: mm-frontend
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: money-manager
  labels:
    app: mm-frontend
spec:
  selector:
    matchLabels:
      app: mm-frontend
  template:
    metadata:
      labels:
        app: mm-frontend
    spec:
      containers:
        - name: front-end
          image: np123dev/money_manager
          ports:
            - containerPort: 80
              name: mm-frontend
          resources:
            limits:
              cpu: 300m
            requests:
              cpu: 100m
