.kubernetes/gke-mm-frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mm-frontend
  labels:
    app: mm-frontend
spec:
  selector:
    matchLabels:
      app: mm-frontend
      tier: frontend
  template:
    metadata:
      labels:
        app: mm-frontend
        tier: frontend
    spec:
      containers:
        - name: frontend
          image: np123dev/money_manager:latest
          ports:
            - containerPort: 80
              name: mm-frontend
          livenessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 60
          resources:
            limits:
              cpu: 200m
            requests:
              cpu: 50m
---
apiVersion: v1
kind: Service
metadata:
  name: mm-frontend
  labels:
    app: mm-frontend
spec:
  ports:
    - port: 80
      targetPort: 80
      name: mm-frontend
  selector:
    app: mm-frontend
    tier: frontend
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mm-frontend-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "mm-frontend-ip"
spec:
  defaultBackend:
    service:
      name: mm-frontend
      port:
        number: 80
---
